--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/cfinefield/postcards",
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.0",
+    "bulma": "0.0.16",
+    "express": "^4.13.4",
+    "express-handlebars": "^3.0.0"
   }
 }
